# SolPOC

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  COPS_201123.docx  MANIFEST.in  Makefile  README.md  UserGuide_v201123.docx  build-requirements.txt  extract_functions.py  functions_COPS.py  gen_docs.ps1  optimisation_multiprocess_v170723.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  sphinx.yml
COPS/: Curve_RTA.py  __init__.py  changement nom de variable.txt  functions_COPS.py  optimisation_multiprocess_tuto_AR_Human.py  optimisation_multiprocess_v120723.py  optimisation_multiprocess_v170723.py  optimisation_multiprocess_v270723.py  tutorial_optimisation_AR.py
COPS/Materials/: Ag_Babar.txt  BaF51.txt  Ch_Rakic.txt  Cr_RLD.txt  K7N.txt  LaK14.txt  LaK34.txt  Mo.txt  PSK3N.txt  PSK53AN.txt  PV_cells.txt  SK2.txt  SSK5.txt  Si3N4.txt  SiC_Larruquert.txt  SolSpec.txt  VO2at100C.txt  ZnO.txt  n115.txt  n15.txt
COPS/Tutorials/: tutorial_optimisation_AR.py  tutorial_optimisation_Bragg_mirror.py  tutorial_optimisation_PVcells.py  tutorial_optimisation_low_e.py  tutorial_optimisation_selectiv_coating.py
COPS/tutorials/: optimisation_multiprocess_tuto_AR_Human.py  optimisation_multiprocess_tuto_Bragg.py  optimisation_multiprocess_tuto_PVcells.py  optimisation_multiprocess_tuto_lowe.py  optimisation_multiprocess_tuto_selectif_coating.py
Examples/: SolPOC_and_tmm_with_nevergrad.py  Sol_Spec.npy  Solpoc_and_tmm_with_scipy.py  basic_example_solpoc.py  fit_experimental_signal.py  optimization_multiprocess.py  readme.md  template_AR.py  template_Bragg_mirror.py  template_PVcells.py  template_low_e.py  template_selective_coating.py  template_spectral_splitting.py  tutoral_optimization_with_materials.py  tutorial_AR.py  tutorial_Bragg_mirror.py  tutorial_PVcells.py  tutorial_PVcells_new.py  tutorial_low_e.py  tutorial_optimisation_AR.py  tutorial_optimisation_Bragg_mirror.py  tutorial_optimisation_low_e.py  tutorial_optimisation_selectiv_coating.py  tutorial_optimisation_selective_coating.py  tutorial_optimization_with_materials.py  tutorial_selective_coating.py  tutoriel_spectral_splitting.py
Examples/2023-11-20-16h53/: air-SiO2_vf=0.17070652073223438.txt
Examples/2023-11-20-16h56/: Fe.txt
Examples/2023-11-20-17h11/: Optimization.txt  seed.txt
Examples/2023-11-20-17h13/: Convergence_25.txt  seed.txt
Examples/2023-11-21-14h33/: Fe.txt  RTA.txt  performance.txt  seed.txt
Examples/2023-11-21-15h18/: Convergence.txt  Convergence_25.txt  Optimization.txt  SiO2.txt  time.txt
Examples/paper_antireflective_coating/: Convergence.txt  Convergence_25.txt  Optimization.txt  RTA.txt  Sol_Spec_mod_R.txt  Sol_Spec_mod_T.txt  Stacks.txt  air-SiO2_vf=0.17070652073223438.txt  air-SiO2_vf=0.4992445611212008.txt  air-SiO2_vf=0.8005395473613736.txt  performance.txt  seed.txt  time.txt
Examples/paper_selective_coating/: Al2O3.txt  Convergence.txt  Convergence_25.txt  Fe.txt  Optimization.txt  RTA.txt  SiO2.txt  Sol_Spec_mod_R.txt  Stacks.txt  W-Al2O3_vf=0.1949419075146206.txt  W-Al2O3_vf=0.4296166247891014.txt  W-Al2O3_vf=0.6875208867384899.txt  performance.txt  seed.txt  time.txt
Examples/paper_solar_mirror/: Al_Rakic.txt  BK7.txt  Convergence.txt  Convergence_25.txt  Optimization.txt  RTA.txt  SiO2.txt  Sol_Spec_mod_R.txt  Sol_Spec_mod_T.txt  Stacks.txt  TiO2.txt  performance.txt  seed.txt  time.txt
Examples/tutorial_AR/: BK7.txt  Convergence.txt  Convergence_25.txt  Optimization.txt  RTA.txt  Sol_Spec_mod_R.txt  Sol_Spec_mod_T.txt  Stacks.txt  performance.txt  seed.txt  time.txt
Examples/tutorial_Bragg_mirror/: BK7.txt  Convergence.txt  Convergence_25.txt  Optimization.txt  RTA.txt  SiO2.txt  Sol_Spec_mod_R.txt  Sol_Spec_mod_T.txt  Stacks.txt  TiO2.txt  (+3 more)
JupyterNotebook/: SolPOC_Chapter_1.ipynb  SolPOC_Chapter_2.ipynb  SolPOC_Chapter_3.ipynb  SolPOC_Chapter_7.ipynb
Materials/: Ag_J.txt  Ag_RBB.txt  Ag_Ra.txt  Al_Hagemann.txt  BaK4N.txt  BaLF4N.txt  Cr.txt  F5.txt  K7.txt  LaF2.txt  PC_T.txt  PSK3.txt  SSK2N.txt  SiO.txt  TiO2.txt  W_RLD.txt  n15.csv  n19.txt  n27.txt  n30.txt
SolPOC/: __init__.py  __int__.py  functions_SolPOC.py  optimization_multiprocess.py  readme.md
docs/: COPS_201123.docx  Readme.md
scripts/: optimization_multiprocess.py  readme.md
solpoc/: __init__.py  cli.py  functions_SolPOC.py  readme.md
tests/: fixture_data.py  functions_SolPOC_test.py  mp_test.py  test.py
(+270 files in other folders)
