[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "solpoc"
version = "0.9.0"

authors = [
    {name = "Antoine Grosjean", email = "antoine.grosjean@epf.fr"},
    {name = "Audrey Soum-Glaude"},
    {name = "Antoine Moreau"},
    {name = "Pauline Bennet"}
]
maintainers = [
    {name = "Antoine Grosjean", email = "antoine.grosjean@epf.fr"},
    {name = "Thalita Drumond", email = "thalita.drumond@epf.fr"}
]
description = "Solar Performances Optimization Code (SolPOC) is an Academic research code, used for solar energy. SolPOC can solve and optimize a stack of thin layers for designed solar mirror, antireflective coating, thermal absorber etc."

requires-python = ">=3.9"

keywords = ["SolPOC", "thin layers stack", "multilayer coating", "global optimization", "solar energy", "optics"]

license = {text = "GNU-GPL-3.0"}
readme = {file  = "README.md", content-type = "text/markdown"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jupyter",
]


[project.urls]
Homepage = "https://github.com/mrgrosjeanantoine/SolPOC"
Issues = "https://github.com/mrgrosjeanantoine/SolPOC/issues"


[tool.setuptools.packages]
find = {}

[project.scripts]
solpoc-init = "solpoc:init"

[tool.setuptools]
include-package-data = true
